@@ -2,6 +2,7 @@ This file shows the changes in this release of xPDO.
 
 xPDO 2.1.0-pl2 (February 16, 2011)
 ====================================
+- Avoid PHP warning from fopen in xPDOFileCache->get()
 
 xPDO 2.1.0-pl (February 16, 2011)
 ====================================
